--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Top Boy Pi Sender</title>
+  <title>PI Bot Setup</title>
 </head>
 <body>
-  <h2>Send Pi Coins</h2>
-  <form action="/api/send" method="POST">
-    <label>Receiver Wallet Address:</label><br>
-    <input type="text" name="receiver" required><br><br>
-
-    <label>Amount (Pi):</label><br>
-    <input type="number" name="amount" step="0.01" required><br><br>
-
-    <button type="submit">Send</button>
+  <h2>Add New Bot</h2>
+  <form id="bot-form">
+    <input name="name" placeholder="Bot Name" required><br>
+    <input name="public" placeholder="Public Key" required><br>
+    <input name="private" placeholder="Private Key" required><br>
+    <input name="receiver" placeholder="Receiver Wallet" required><br>
+    <input name="amount" placeholder="Amount to Send" required><br>
+    <input name="interval" placeholder="Interval (ms)" value="200" required><br>
+    <button type="submit">Add Bot</button>
   </form>
+
+  <h3>Status</h3>
+  <pre id="status">Loading...</pre>
+
+  <script>
+    document.getElementById('bot-form').onsubmit = async (e) => {
+      e.preventDefault();
+      const data = Object.fromEntries(new FormData(e.target));
+      const res = await fetch('/api/add-bot', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(data)
+      });
+      alert((await res.json()).ok ? 'Bot added' : 'Failed');
+    };
+
+    async function pollStatus() {
+      const res = await fetch('/api/status');
+      const status = await res.json();
+      document.getElementById('status').textContent = JSON.stringify(status, null, 2);
+      setTimeout(pollStatus, 1000);
+    }
+
+    pollStatus();
+  </script>
 </body>
-</html>
+  </html>
